# 2026-resnets-of-all-shapes-and-sizes

./: .gitignore  README.md  pyproject.toml
linear_experiments_python/: exp_cvg_rate.ipynb  exp_training_trajectories.ipynb  plt_cvg_rate.ipynb  plt_training_trajectories.ipynb
linear_experiments_python/src/: linear_correlations.py  linear_simulation.py
linear_experiments_python/src/resnet/: activations.py  losses.py  model.py  model_trainable_embedding.py  model_with_embedding.py
nonlinear_experiments_julia/: 2026-resnets-all-shapes-sizes.ipynb
