[project]
name = "2026-resnets-of-all-shapes-and-sizes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "plotly>=6.5.0",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
    "tqdm>=4.67.3",
]
